profile controller added

--- a/FitLab.API/appsettings.json
+++ b/FitLab.API/appsettings.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Data Source=DESKTOP-EBSS0O7\\SQLEXPRESS;Initial Catalog=FitLab;Integrated Security=True"
+    "Default": "Data Source=DATAIFX;Initial Catalog=FitLab;Integrated Security=True"
   }
 }
