--- a/FitLab.DataAccess/FitLab.DataAccess.csproj
+++ b/FitLab.DataAccess/FitLab.DataAccess.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\Fitlab.Entities\Fitlab.Entities.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
